# odata-parser-rs

./: .editorconfig  Cargo.toml  TODO
doc/: COMPILER_NOTES.md  OVERVIEW.md  PERMISSION_MODEL.md
src/: abstract_model.rs  ast.rs  compiler.rs  csdl.rs  derefcell.rs  main-traced.rs  main.rs  parser.rs  schema.rs  util.rs
src/db/: common.rs  engine.rs  mod.rs
src/db/postgres/: engine.rs  types.rs
src/templates/postgres/: column.sql  model.sql  table.sql
tests/fixtures/csdl/: entity_type_simple_key_example_10.json  entity_types.json  simple_schema.json
