[package]
name = "odata-parser-rs"
version = "0.1.0"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
edition = "2018"

[dependencies]
nom = "^5"
uuid = "0.7"
serde = { version = "1.0", features = ["derive"] }
maplit = "1.0.1"

# serde_json is just for the example, not required in general
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
